changed method "toList" on "collect(Collectors.toList())"